engine/codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__mcp__computer_activity__tests__computer_activity_failed_result.snap
---
source: tui/src/history_cell/computer_activity_tests.rs
expression: "render(&cell, 90)"
---
• Used computer · 3 actions · 1 failed
  ├ Inspect page
  ├ Reload page
  └ Failed: Inspect refreshed page — Browser state changed
