engine/codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__mcp__computer_activity__tests__computer_activity_interrupted.snap
---
source: tui/src/history_cell/computer_activity_tests.rs
expression: "render(&cell, 80)"
---
• Used computer · 2 actions · 1 failed
  ├ Opened Chrome
  └ Failed: Load the terminal — interrupted
