engine/codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__mcp__computer_activity__tests__computer_activity_success.snap
---
source: tui/src/history_cell/computer_activity_tests.rs
expression: "render(&cell, 80)"
---
• Used computer · 2 actions
  ├ Inspect page
  └ Reload page
