engine/codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__mcp__computer_activity__tests__computer_activity_unicode.snap
---
source: tui/src/history_cell/computer_activity_tests.rs
expression: "render(&cell, 24)"
---
• Used computer · 1
  action · 1 failed
  └ Failed: diagnostic …
